# Django-Menu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
menu/: admin.py  constants.py  models.py  tree.py  utils.py  views.py
menu/management/commands/: load_test_data.py
menu/migrations/: 0001_initial.py  0002_item_named_url_item_slug_item_url_menu_slug_and_more.py  0003_remove_menu_slug_alter_item_name_and_more.py  0004_alter_item_slug.py
menu/templatetags/: menu_extras.py
templates/: example.html
templates/menu/: draw_menu.html  menu_item.html
