[tool.poetry]
name = "menu-tree"
version = "0.1.0"
description = ""
authors = ["Denis <snegirev.dv@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
